--- a/style/reset.css
+++ b/style/reset.css
@@ -1,13 +1,18 @@
-@charset "utf-8"
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,
-textarea,p,blockquote,th,td { 
+@charset "utf-8";
+
+
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td 
+{ 
     margin:0;
     padding:0;
 }
+
+
 table {
     border-collapse:collapse;
     border-spacing:0;
 }
+
 fieldset,img { 
     border:0;
 }
@@ -34,7 +39,7 @@ abbr,acronym { border:0;
 
 body
 {
-	font-size: :12px;
+	font-size: 12px;
 }
 
 img
@@ -47,9 +52,17 @@ li
 	list-style: none;
 }
 
-input, select,textarea
+input
 {
 	outline: none;
+	border: none;
+}
+
+
+select,textarea
+{
+	outline: none;
+	border: none;
 }
 
 textarea
@@ -73,6 +86,15 @@ a
 .clearfix
 {
 	zoom: 1;
+}
+
+.fl
+{
+float: left ;
+}
+.fr
+{
+	float: right;
 }
 
 
